--- a/src/app/listas/listas.component.html
+++ b/src/app/listas/listas.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="text-center text-primary mt-5">Listas</h1>
+    <h1 class="text-center text-primary mt-5">Alumnos</h1>
     <hr>
     <div class="row">
         <div class="col-md-6">
