--- a/src/app/listas/listas.component.html
+++ b/src/app/listas/listas.component.html
@@ -9,7 +9,7 @@
             </ul>
         </div>
         <div class="col-md-6">
-            <h2 class="text-center text-danger">Mujeres</h2>
+            <h2 class="text-center text-success">Mujeres</h2>
             <ul class="list-group">
                 <li class="list-group-item list-group-item-success text-center" *ngFor="let Mujeres of lista1">{{Mujeres}}</li>
             </ul>
